# masEngine

./: .gitignore  BuildGameTemplate.bat  BuildVars.bat  CMakeLists.txt  Debug.bat  GameBuildTemplate.bat  Run.bat  build.bat  run.bat
Projects/eng_test/: Build.bat
Projects/eng_test/inc/: masD3D11.h
Projects/eng_test/src/: masD3D11.cpp  test.cpp
inc/: masDefs.h  masEngine.h  masGameLoader.h  masInputKeyMap.h  masPrint.h  masTime.h  masWindow.h
inc/GameAPI/: masGameAPI.h
inc/GameAPI/GameAPI/: masEngineAPI.h  masGameAPI.h
src/: Test.cpp  masEngine.cpp  masGameLoaderWin.cpp  masInput.h  masInputControllerWin.cpp  masInputKeyMapWin.cpp  masPrint.cpp  masTimeWin.cpp  masWindowWin.cpp
